# LS-RACING

./: CMakeLists.txt  README.md  grafics.h  menu.h
LS-RACING/: LS_allegro.c  bidirectionalist.c  bidirectionalist.h  configuracioCotxe.c  grafics.c  menu.c  sortedlist.c
Proyecto/: LS_allegro.h  carregarFitxers.c  carregarFitxers.h  configuracioCotxe.h  main.c  sortedlist.h
